# post

./: .gitignore  Cargo.toml  README.md  llms.txt
crates/post_core/: Cargo.toml
crates/post_core/src/: clipboard.rs  config.rs  crypto.rs  error.rs  lib.rs  sync.rs  transport.rs
crates/post_daemon/: Cargo.toml
crates/post_daemon/src/: api.rs  lib.rs  main.rs  notifications.rs
crates/post_tui/: Cargo.toml
crates/post_tui/src/: lib.rs
ios/: README.md  run.sh
ios/PostCommon/Sources/: ClipboardService.swift  CryptoService.swift  KeychainService.swift  Models.swift  PostBackgroundTaskManager.swift  PostClient.swift  PostManager.swift  TailscaleService.swift
ios/PostIntents/Sources/: AppIntents.swift
ios/PostiOS/: ContentView.swift  Info.plist  PostApp.swift
ios/PostiOS.xcodeproj/: project.pbxproj
ios/PostiOS.xcodeproj/project.xcworkspace/xcuserdata/nicojaffer.xcuserdatad/: UserInterfaceState.xcuserstate
ios/PostiOS.xcodeproj/xcuserdata/nicojaffer.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: daemon.rs  main.rs  service.rs
