[package]
name = "post_daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Background daemon for Post clipboard synchronization"

[dependencies]
post_core = { path = "../post_core" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
windows-sys = "0.48"