[package]
name = "post_daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Background daemon library for Post clipboard synchronization"

[dependencies]
post_core = { path = "../post_core" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"
dirs = "5.0"
notify-rust.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }
libc = "0.2"
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
windows-sys = "0.48"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
serial_test = "3.0"